# tg-bot-paid-priv-group

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte
frontend/src/lib/: TelegramEditor.svelte  api.ts  i18n.svelte.ts  telegramify.ts  types.ts
frontend/src/pages/: Dashboard.svelte  Groups.svelte  Payments.svelte  Phases.svelte  Settings.svelte  Users.svelte
migrations/: 0001_initial_schema.sql  0003_payments.sql  0004_info_blocks_and_settings.sql  0007_language_setting.sql  0010_split_language_settings.sql
migrations/postgres/: 0001_initial_schema.sql  0002_phases_and_questions.sql  0003_payments.sql  0004_info_blocks_and_settings.sql  0005_livepix.sql  0006_invite_phases.sql  0007_language_setting.sql  0008_question_media.sql  0009_question_media_file_id.sql  0010_split_language_settings.sql  0011_payment_gate.sql
migrations/sqlite/: 0002_phases_and_questions.sql  0005_livepix.sql  0006_invite_phases.sql  0011_payment_gate.sql
src/: config.rs  error.rs  i18n.rs  main.rs
src/backup/: mod.rs  restore.rs
src/bot/: commands.rs  mod.rs  state.rs  util.rs
src/bot/admin/: commands.rs  guards.rs  mod.rs
src/bot/group/: auto_register.rs  invite_manager.rs  member_join.rs  mod.rs
src/bot/user/: invite.rs  media.rs  mod.rs  payment.rs  registration.rs  welcome.rs
src/db/: mod.rs  models.rs
src/db/queries/: answers.rs  invite_links.rs  (+7 more)
src/payment/: external.rs  livepix.rs  mod.rs  telegram.rs
src/web/: auth.rs  mod.rs  state.rs
(+12 files in other folders)
