[package]
name = "tg-bot"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "tg-bot"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Telegram bot framework
teloxide = { version = "0.17", default-features = false, features = ["macros", "ctrlc_handler", "throttle", "rustls"] }
bytes = "1"

# Database (any = AnyPool, supports sqlite + postgres via DATABASE_URL)
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "postgres",
    "any",
    "migrate",
    "chrono",
    "uuid",
] }

# Web framework (admin interface)
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["auth", "cors", "trace", "fs"] }
tower = { version = "0.4" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
dotenvy = "0.15"
envy = "0.4"

# Error handling
thiserror = "1"
anyhow = "1"

# HTTP client (external payment API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
